# ESW

./: CMakeLists.txt
.github/workflows/: blank.yml
examples/: CMakeLists.txt  NFComplexEval.cpp  NFComplexEval.h  _clang-format  main.cpp
examples/NFContour/: CMakeLists.txt  NFContour.cpp  NFContour.h  NFContourMain.cpp  NFContour_Config.h
examples/NFEvalGUI/: CMakeLists.txt  NFEvalGUI.cpp  NFEvalGUI.h  NFEvalGUI.ui  NFEvalGUIMainWindow.cpp  NFEvalGUIMainWindow.h
examples/NFPrfIO/: CMakeLists.txt  NFPrfIO.cpp  NFPrfIO.h  NFPrfIOMain.cpp  NFPrfIO_Config.h  Readme.md  mahr (1).prf
